--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <section class="player player--0 player--active">
-        <h2 class="name" id="name--0">nihal</h2>
+        <h2 class="name" id="name--0">player1</h2>
         <p class="score" id="score--0">43</p>
         <div class="current">
           <p class="current-label">Current</p>
@@ -18,7 +18,7 @@
         </div>
       </section>
       <section class="player player--1">
-        <h2 class="name" id="name--1">Manshi❤️</h2>
+        <h2 class="name" id="name--1">player2</h2>
         <p class="score" id="score--1">24</p>
         <div class="current">
           <p class="current-label">Current</p>
